added synopsis
